<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="plus_sign">plus sign</string>
    <string name="login">LOGIN</string>
    <string name="jonnyb">JonnyB</string>
    <string name="jonny_devslopes_com">jonny@devslopes.com</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="user_name">user name</string>
    <string name="tap_to_generate_new_user_avatar">Tap to generate new user avatar</string>
    <string name="generate_background_color">GENERATE BACKGROUND COLOR</string>
    <string name="create_user">CREATE USER</string>
    <string name="avatar">Avatar</string>
</resources>
